@@ -4,7 +4,7 @@
             'element' => [
                            'Architecture',
                            {
-                             'value_type' => 'uniline',
+                             'value_type' => 'string',
                              'mandatory' => '1',
                              'type' => 'leaf'
                            },
@@ -27,8 +27,8 @@
                            {
                              'cargo' => {
                                           'value_type' => 'uniline',
-                                          'type' => 'leaf',
-                                          class => 'Config::Model::Debian::Dependency',
+                                          'class' => 'Config::Model::Debian::Dependency',
+                                          'type' => 'leaf'
                                         },
                              'type' => 'list'
                            },
@@ -40,7 +40,7 @@
                                         },
                              'type' => 'list'
                            },
-                           'Breaks',
+                           'Suggests',
                            {
                              'cargo' => {
                                           'value_type' => 'uniline',
@@ -48,7 +48,21 @@
                                         },
                              'type' => 'list'
                            },
-                           'Replaces',
+                           'Enhances',
+                           {
+                             'value_type' => 'uniline',
+                             'type' => 'leaf'
+                           },
+                           'Pre-Depends',
+                           {
+                             'cargo' => {
+                                          'value_type' => 'uniline',
+                                          'class' => 'Config::Model::Debian::Dependency',
+                                          'type' => 'leaf'
+                                        },
+                             'type' => 'list'
+                           },
+                           'Breaks',
                            {
                              'cargo' => {
                                           'value_type' => 'uniline',
@@ -72,7 +86,7 @@
                                         },
                              'type' => 'list'
                            },
-                           'Suggests',
+                           'Replaces',
                            {
                              'cargo' => {
                                           'value_type' => 'uniline',
@@ -83,19 +97,29 @@
                            'Description',
                            {
                              'value_type' => 'string',
-                             'warn_if_match' => { 
-                                 '\\n[\\-\\*]' => {
-                                     msg => 'lintian like possible-unindented-list-in-extended-description. i.e. "-" or "*" without leading white space',
-                                     fix => 's/\n([\-\*])/\n $1/g; $_ ;',
-                                 },
-                                 'Debian GNU/Linux' => {
-                                     msg => 'deprecated in favor of Debian GNU',
-                                     fix => 's!Debian GNU/Linux!Debian GNU!g;'
-                                 },
-                             },
+                             'warn_if_match' => {
+                                                  'Debian GNU/Linux' => {
+                                                                          'msg' => 'deprecated in favor of Debian GNU',
+                                                                          'fix' => 's!Debian GNU/Linux!Debian GNU!g;'
+                                                                        },
+                                                  '[^\\n]{80,}' => {
+                                                                  'msg' => 'Line too long in description',
+                                                                  'fix' => 'eval { require Text::Autoformat   ; } ;
+if ($@) { CORE::warn "cannot fix without Text::Autoformat"}
+else {
+        import Text::Autoformat ;
+        $_ = autoformat($_) ;
+	chomp;
+}'
+                                                                },
+                                                  '\\n[\\-\\*]' => {
+                                                                     'msg' => 'lintian like possible-unindented-list-in-extended-description. i.e. "-" or "*" without leading white space',
+                                                                     'fix' => 's/\\n([\\-\\*])/\\n $1/g; $_ ;'
+                                                                   }
+                                                },
                              'mandatory' => '1',
-                             'type' => 'leaf',
-                            }
+                             'type' => 'leaf'
+                           }
                          ]
           }
         ]
